<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetStudentDataToFirebase"
    android:orientation="vertical"
    android:background="@color/background_blue"
    android:padding="25dp">

    <EditText
        android:id="@+id/sit_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sit_num"
        android:background="@color/white"
        android:padding="10dp"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"/>
    <EditText
        android:id="@+id/student_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/student_name"
        android:background="@color/white"
        android:padding="10dp"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"/>
    <EditText
        android:id="@+id/sub1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sub1"
        android:background="@color/white"
        android:padding="10dp"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"/>
    <EditText
        android:id="@+id/sub2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sub2"
        android:background="@color/white"
        android:padding="10dp"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"/>
    <EditText
        android:id="@+id/sub3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sub3"
        android:background="@color/white"
        android:padding="10dp"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"/>
    <EditText
        android:id="@+id/sub4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sub4"
        android:background="@color/white"
        android:padding="10dp"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"/>
    <EditText
        android:id="@+id/sub5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sub5"
        android:background="@color/white"
        android:padding="10dp"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"/>
    <EditText
        android:id="@+id/sub6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sub6"
        android:background="@color/white"
        android:padding="10dp"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"/>
    <Button
        android:id="@+id/enter_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/enter"
        android:textAllCaps="false"/>

</LinearLayout>