<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SitNo"
    android:orientation="vertical"
    android:background="@color/background_blue"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/background_blue"
        android:gravity="center">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/hicis_logo"
            android:contentDescription="@string/institute_name"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/institute_name"
            android:layout_marginTop="10dp"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/sit_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sit_num_edit_text"
            android:padding="15dp"
            android:layout_margin="15dp"
            android:inputType="number"
            android:hint="@string/sit_num" />
        <Button
            android:id="@+id/enter_sit_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/enter"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:paddingEnd="25dp"
            android:paddingStart="25dp"
            android:background="@drawable/enter_btn"
            android:textAllCaps="false"/>

        <TextView
            android:id="@+id/show_all_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_all_results"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="start"
            android:layout_margin="25dp" />

    </LinearLayout>



</ScrollView>