<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".StudentDetails"
    android:background="@color/background_blue"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Top Section-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/top_section"
            android:padding="7dp">
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/sit_num_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sit_num"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/sit_num"
                    tools:ignore="InvalidId,MissingConstraints" />

                <TextView
                    android:id="@+id/sit_num"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sit_num"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintStart_toEndOf="@id/sit_num_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="InvalidId,MissingConstraints" />
            </android.support.constraint.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/white"/>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/student_name_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/student_name"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/student_name"
                    tools:ignore="InvalidId,MissingConstraints" />

                <TextView
                    android:id="@+id/student_name"
                    android:layout_width="0dp"
                    android:layout_height="33dp"
                    android:text="@string/student_name"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/student_name_text"
                    tools:ignore="InvalidId,MissingConstraints"
                    tools:layout_editor_absoluteY="1dp" />
            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

        <!--Center Section-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/center_section"
            android:padding="7dp"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/subject_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Subject"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintEnd_toStartOf="@id/appreciation"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="InvalidId,MissingConstraints" />

                <TextView
                    android:id="@+id/appreciation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Appreciation"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintStart_toEndOf="@id/subject_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="InvalidId,MissingConstraints" />
            </android.support.constraint.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/white"/>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/sub1_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sub1"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/sub1"
                    tools:ignore="InvalidId,MissingConstraints" />

                <TextView
                    android:id="@+id/sub1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sub1"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintStart_toEndOf="@id/sub1_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="InvalidId,MissingConstraints" />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/sub2_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sub2"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/sub2"
                    tools:ignore="InvalidId,MissingConstraints" />

                <TextView
                    android:id="@+id/sub2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sub2"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintStart_toEndOf="@id/sub2_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="InvalidId,MissingConstraints" />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/sub3_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sub3"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/sub3"
                    tools:ignore="InvalidId,MissingConstraints" />

                <TextView
                    android:id="@+id/sub3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sub3"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintStart_toEndOf="@id/sub3_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="InvalidId,MissingConstraints" />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/sub4_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sub4"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/sub4"
                    tools:ignore="InvalidId,MissingConstraints" />

                <TextView
                    android:id="@+id/sub4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sub4"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintStart_toEndOf="@id/sub4_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="InvalidId,MissingConstraints" />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/sub5_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sub5"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/sub5"
                    tools:ignore="InvalidId,MissingConstraints" />

                <TextView
                    android:id="@+id/sub5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sub5"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintStart_toEndOf="@id/sub5_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="InvalidId,MissingConstraints" />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/last_subject_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/sub6_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sub6"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/sub6"
                    tools:ignore="InvalidId,MissingConstraints" />

                <TextView
                    android:id="@+id/sub6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sub6"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintStart_toEndOf="@id/sub6_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="InvalidId,MissingConstraints" />
            </android.support.constraint.ConstraintLayout>






        </LinearLayout>

        <!--Bottom Section-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bottom_section"
            android:layout_marginTop="10dp"
            android:padding="7dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/total_sum_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/total_sum"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/total_sum"
                    tools:ignore="InvalidId,MissingConstraints" />

                <TextView
                    android:id="@+id/total_sum"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/total_sum"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintStart_toEndOf="@id/total_sum_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="InvalidId,MissingConstraints" />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/percent_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/percentage"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/percent"
                    tools:ignore="InvalidId,MissingConstraints" />

                <TextView
                    android:id="@+id/percent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/percentage"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintStart_toEndOf="@id/percent_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="InvalidId,MissingConstraints" />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/total_appreciation_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/appreciation"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/total_appreciation"
                    tools:ignore="InvalidId,MissingConstraints" />

                <TextView
                    android:id="@+id/total_appreciation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/appreciation"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintStart_toEndOf="@id/total_appreciation_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="InvalidId,MissingConstraints" />
            </android.support.constraint.ConstraintLayout>


        </LinearLayout>

    </LinearLayout>


</ScrollView>